[gd_scene load_steps=11 format=3 uid="uid://q63lxc50ni31"]

[ext_resource type="Script" uid="uid://dx5elwsatt7x1" path="res://entities/enemies/enemy.gd" id="1_cy1ia"]
[ext_resource type="Script" uid="uid://dwelqt02mdt6t" path="res://entities/enemies/enemy_fsm.gd" id="2_8ke4v"]
[ext_resource type="Script" uid="uid://dsoycdvxdfa85" path="res://entities/enemies/states/move.gd" id="3_juveh"]
[ext_resource type="Script" uid="uid://bq00hd3j80wj5" path="res://entities/enemies/states/idle.gd" id="4_vk1wn"]
[ext_resource type="Script" uid="uid://8um3ksdl6l6u" path="res://entities/enemies/states/hit.gd" id="5_t30j3"]
[ext_resource type="Script" uid="uid://csyr6g4qwsusa" path="res://entities/enemies/states/die.gd" id="6_70kam"]
[ext_resource type="PackedScene" uid="uid://cre1uon7pnve1" path="res://interfaces/HUD/entity/entity_hud.tscn" id="7_dxylf"]
[ext_resource type="Texture2D" uid="uid://dc7sh83ir7n5h" path="res://entities/enemies/infantry/assets/textures/tier2/20250608_194336.png" id="7_gj3y3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6olqj"]
resource_local_to_scene = true
animations = [{
"frames": [],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_gj3y3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_gj3y3")
}, {
"duration": 1.0,
"texture": ExtResource("7_gj3y3")
}, {
"duration": 1.0,
"texture": ExtResource("7_gj3y3")
}, {
"duration": 1.0,
"texture": ExtResource("7_gj3y3")
}, {
"duration": 1.0,
"texture": ExtResource("7_gj3y3")
}, {
"duration": 1.0,
"texture": ExtResource("7_gj3y3")
}, {
"duration": 1.0,
"texture": ExtResource("7_gj3y3")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_q2pkr"]
resource_local_to_scene = true
radius = 24.0

[node name="Enemy" type="CharacterBody2D"]
collision_mask = 7
motion_mode = 1
script = ExtResource("1_cy1ia")
metadata/_edit_group_ = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_8ke4v")
START_STATE = NodePath("Move")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("3_juveh")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_vk1wn")

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource("5_t30j3")

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource("6_70kam")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6olqj")
animation = &"move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q2pkr")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 100.0
target_desired_distance = 100.0
avoidance_enabled = true
radius = 32.0
time_horizon_agents = 40.0

[node name="UI" type="Node2D" parent="."]
z_index = 50
z_as_relative = false

[node name="EntityHUD" parent="UI" instance=ExtResource("7_dxylf")]
offset_left = -48.0
offset_top = -117.0
offset_right = -48.0
offset_bottom = -117.0

[connection signal="state_changed" from="StateMachine" to="." method="_on_state_machine_state_changed"]
[connection signal="animation_finished" from="Sprite2D" to="StateMachine" method="_on_Sprite_animation_finished"]
[connection signal="target_reached" from="NavigationAgent2D" to="StateMachine/Move" method="_on_navigation_agent_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
